--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ title: HCI Project
 email: stliu18@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Group Project for CSCI376 - Human-Computer Interaction
-baseurl: "/hci-project" # the subpath of your site, e.g. /blog
-url: "http://sliuu.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "http://sliuu.github.io/hci-project" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: sliuu
 
 # Build settings
